<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/background2"
    tools:context=".Addclass"
    tools:layout_editor_absoluteX="3dp"
    tools:layout_editor_absoluteY="68dp">


    <EditText
        android:id="@+id/Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackgriund"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/condusted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/condusted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackgriund"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/conducted_by"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/subject22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title1"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackgriund"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/fee"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/Time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subject22" />

    <EditText
        android:id="@+id/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackgriund"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/time"
        android:inputType="time"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/Phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fee"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackgriund"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Time"
        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/new_class"
        android:textColor="#3A3F93"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/Title1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/message"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/edittextbackgriund"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Phone" />

    <EditText
        android:id="@+id/subject22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackgriund"
        android:ems="10"
        android:gravity="left"
        android:hint="subject"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/fee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/condusted"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_class"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

</androidx.constraintlayout.widget.ConstraintLayout>